assets/styles/style.css
/* ... */
/* simplesite tabs */
@media (max-width: 720px ){
	.theme  .theme--follower{
		pointer-events: none;
	}
	.theme.tabs--top-theme{
		z-index: 5;
	}
	.theme.tabs--top-theme .theme--follower{
		pointer-events: all;
	}
		.layer__committee{
			pointer-events: none;
			transition: none;
		}
		.layer__committee.tabs--top-theme{
			z-index: 10;
			opacity: 1 !important;
			pointer-events: all !important;
		}

	.about-fake-tabs .theme{
		height: 2.4rem;
	}
}

/* mailchimp specific stuff */
#mc_embed_signup .indicates-required{
	display: none;
}
	#mc_embed_signup .asterisk{
		font-size: .6rem;
		line-height: 1.5;
		position: absolute;
		right: 0;
	}
.mc-field-group{
	position: relative;
	margin-bottom: 1rem;
}
div.mce_inline_error{
	background: transparent !important;
	color: inherit !important;
	font-weight: normal !important;
	padding: .2rem 0 !important;
	right: 0;
	font-size: .6rem;
	position: absolute;
	bottom: -1.6rem;
}

